@@ -22,6 +22,7 @@ Stable versions
 	- Correct default of sample default panning values to -1 (no default
 	  panning) for most module formats.
 	- Fix Galaxy Music System 4.0 sample default panning.
+	- Simplify read_event_mod sample default volume handling.
 	Changes by Alice Rowan and ds-sloth:
 	- Minor Impulse Tracker loader performance improvements.
 
